--- a/build.xml
+++ b/build.xml
@@ -1693,7 +1693,8 @@
    <taskdef resource="cloverlib.xml" classpath="${clover.jar}"/>
    <mkdir dir="${clover.db.dir}"/>
    <clover-setup initString="${clover.db.dir}/hadoop_coverage.db">
-     <fileset dir="src" includes="tools/**/* java/**/*"/>
+     <fileset dir="${src.dir}" includes="tools/**/* java/**/*"/>
+     <testsources dir="${test.src.dir}" />
    </clover-setup>
 </target>
 
