--- a/build.xml
+++ b/build.xml
@@ -1178,6 +1178,32 @@
         <exclude name="CHANGES.txt"/>
         <exclude name="docs/"/>
         <exclude name="lib/jdiff/"/>
+        <exclude name="src/contrib/thriftfs/gen-*/" />
+        <exclude name="**/conf/*" />
+        <exclude name="webapps/**/WEB-INF/web.xml"/>
+        <exclude name="src/docs/releasenotes.html" />
+        <exclude name="src/test/hdfs/org/apache/hadoop/cli/clitest_data/" />
+        <exclude name="**/*/robots.txt" />
+        <exclude name="src/c++/libhdfs/m4/libtool.m4" />
+        <exclude name="src/c++/libhdfs/m4/lt~obsolete.m4" />
+        <exclude name="src/c++/libhdfs/m4/ltoptions.m4" />
+        <exclude name="src/c++/libhdfs/m4/ltsugar.m4" />
+        <exclude name="src/c++/libhdfs/m4/ltversion.m4" />
+        <exclude name="src/test/commit-tests" />
+        <exclude name="src/test/smoke-tests" />
+        <exclude name="src/test/all-tests" />
+        <exclude name="**/*/*.properties" />
+        <exclude name="src/c++/libhdfs/config.guess" />
+        <exclude name="src/c++/libhdfs/config.sub" />
+        <exclude name="src/c++/libhdfs/configure" />
+        <exclude name="src/c++/libhdfs/depcomp" />
+        <exclude name="src/c++/libhdfs/install-sh" />
+        <exclude name="src/c++/libhdfs/ltmain.sh" />
+        <exclude name="src/c++/libhdfs/missing" />
+        <exclude name="src/contrib/hdfsproxy/src/test/resources/" />
+        <exclude name="src/test/checkstyle-noframes-sorted.xsl" />
+        <exclude name="src/test/checkstyle.xml" />
+        <exclude name="src/test/findbugsExcludeFile.xml" />
       </fileset>
     </rat:report>
   </target>
