HDFS-1406. Reverting previous commit because a wrong file got committed along the line.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1051333 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -719,12 +719,12 @@
     <property name="continueOnFailure" value="true"/>
     <antcall target="run-test-hdfs"/>
     <antcall target="run-test-unit"/>
+    <antcall target="run-test-hdfs-fault-inject"/>
     <available file="${test.build.dir}/testsfailed" property="testsfailed"/>
     <fail if="testsfailed">Tests failed!</fail>
   </target>
 
   <target name="test" depends="test-c++-libhdfs, jar-test, test-core" description="Run all unit tests">
-    <antcall target="run-test-hdfs-fault-inject"/>
     <subant target="test-contrib">
       <fileset file="${basedir}/build.xml"/>
      </subant>
@@ -1516,7 +1516,7 @@
          uri="urn:maven-artifact-ant" classpathref="mvn-ant-task.classpath"/>
   </target>   
 
-  <target name="mvn-install" depends="mvn-taskdef,jar,jar-test,set-version"
+  <target name="mvn-install" depends="mvn-taskdef,jar,jar-test,set-version,-mvn-system-install"
      description="To install hadoop hdfs and test jars to local filesystem's m2 cache">
      <artifact:pom file="${hadoop-hdfs.pom}" id="hadoop.hdfs"/>
      <artifact:pom file="${hadoop-hdfs-test.pom}" id="hadoop.hdfs.test"/>
@@ -1529,9 +1529,6 @@
         <attach file="${hadoop-hdfs-test-sources.jar}" classifier="sources" />
      </artifact:install>
    </target>
-
-   <target name="mvn-si-install" depends="mvn-install,-mvn-system-install"
-           description="Install system integration tests jars as well"/>
   
    <target name="mvn-deploy" depends="mvn-taskdef, jar, jar-test,
      jar-system, jar-test-system, set-version, signanddeploy, simpledeploy"
