HDFS-1511. 98 Release Audit warnings on trunk and branch-0.22. Update
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1051603 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -1204,6 +1204,9 @@
         <exclude name="src/test/checkstyle-noframes-sorted.xsl" />
         <exclude name="src/test/checkstyle.xml" />
         <exclude name="src/test/findbugsExcludeFile.xml" />
+        <exclude name="src/docs/**/*.odg" />
+        <exclude name="**/*.tgz" />
+        <exclude name="**/*.tar" />
       </fileset>
     </rat:report>
   </target>
