--- a/ivy.xml
+++ b/ivy.xml
@@ -105,6 +105,8 @@
     </dependency>
    <dependency org="org.mockito" name="mockito-all" rev="${mockito-all.version}" 
                conf="test->default"/>
+   <dependency org="org.mortbay.jetty" name="jetty-servlet-tester" rev="${jetty.version}"
+               conf="test->default"/>
    <!-- dependency addition for the fault injection -->
    <dependency org="org.aspectj" name="aspectjrt" rev="${aspectj.version}"
                conf="common->default"/>
