--- a/src/contrib/raid/build.xml
+++ b/src/contrib/raid/build.xml
@@ -35,7 +35,7 @@ to call at top-level: ant deploy-contrib compile-core-test
 
   <target name="test-junit" depends="compile,compile-test" if="test.available">
     <junit showoutput="${test.output}" fork="yes" printsummary="yes" errorProperty="tests.failed" 
-           haltonfailure="no" failureProperty="tests.failed">
+           haltonfailure="no" failureProperty="tests.failed" timeout="${test.timeout}">
 
         <classpath refid="test.classpath"/>
         <sysproperty key="test.build.data" value="${build.test}/data"/>
