--- a/src/c++/pipes/configure.ac
+++ b/src/c++/pipes/configure.ac
@@ -20,6 +20,9 @@
 AC_PREREQ(2.59)
 AC_INIT(hadoop-pipes, 0.13.0, omalley@apache.org)
 
+AC_CONFIG_AUX_DIR([config])
+AC_CONFIG_MACRO_DIR([../utils/m4])
+
 AM_INIT_AUTOMAKE([subdir-objects foreign no-dist])
 
 AC_CONFIG_SRCDIR([impl/HadoopPipes.cc])
