--- a/build.xml
+++ b/build.xml
@@ -1200,6 +1200,7 @@
         <exclude name="webapps/**/WEB-INF/web.xml"/>
         <exclude name="src/docs/releasenotes.html" />
         <exclude name="src/test/hdfs/org/apache/hadoop/cli/clitest_data/" />
+        <exclude name="src/test/hdfs/org/apache/hadoop/hdfs/tools/offlineEditsViewer/editsStored*" />
         <exclude name="**/*/robots.txt" />
         <exclude name="src/c++/libhdfs/m4/libtool.m4" />
         <exclude name="src/c++/libhdfs/m4/lt~obsolete.m4" />
