HDFS-780. Revive TestFuseDFS. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1081897 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/contrib/build.xml
+++ b/src/contrib/build.xml
@@ -46,6 +46,8 @@
   <!-- ====================================================== -->
   <target name="test">
     <subant target="test">
+      <property name="continueOnFailure" value="true"/>
+      <fileset dir="." includes="fuse-dfs/build.xml"/>
       <fileset dir="." includes="hdfsproxy/build.xml"/>
     </subant>
   </target>
