HDFS-1757. Don't compile fuse-dfs by default. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1081904 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/contrib/build.xml
+++ b/src/contrib/build.xml
@@ -28,7 +28,8 @@
   <!-- ====================================================== -->
   <target name="compile">
     <subant target="compile">
-      <fileset dir="." includes="*/build.xml"/>
+      <fileset dir="." includes="thriftfs/build.xml"/>
+      <fileset dir="." includes="hdfsproxy/build.xml"/>
     </subant>
   </target>
   
@@ -46,8 +47,6 @@
   <!-- ====================================================== -->
   <target name="test">
     <subant target="test">
-      <property name="continueOnFailure" value="true"/>
-      <fileset dir="." includes="fuse-dfs/build.xml"/>
       <fileset dir="." includes="hdfsproxy/build.xml"/>
     </subant>
   </target>
