MAPREDUCE-2348. Disable mumak tests on trunk since they currently time out. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1082400 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/contrib/build.xml
+++ b/src/contrib/build.xml
@@ -66,7 +66,8 @@
       <fileset dir="." includes="dynamic-scheduler/build.xml"/>
       <fileset dir="." includes="gridmix/build.xml"/>
       <fileset dir="." includes="vertica/build.xml"/>
-      <fileset dir="." includes="mumak/build.xml"/>
+      <!-- mumak tests disabled due to timeouts. See MAPREDUCE-2348
+      <fileset dir="." includes="mumak/build.xml"/> -->
       <fileset dir="." includes="raid/build.xml"/>
     </subant>
     <available file="${build.contrib.dir}/testsfailed" property="testsfailed"/>
