--- a/src/contrib/raid/build.xml
+++ b/src/contrib/raid/build.xml
@@ -45,7 +45,7 @@ to call at top-level: ant deploy-contrib compile-core-test
               <sysproperty key="hadoop.test.localoutputfile" value="${hadoop.test.localoutputfile}"/>
               <sysproperty key="hadoop.log.dir" value="${hadoop.log.dir}"/>
         <sysproperty key="test.src.dir" value="${test.src.dir}"/>
-        <formatter type="plain" />
+        <formatter type="${test.junit.output.format}" />
         <batchtest todir="${build.test}" unless="testcase">
            <fileset dir="${src.test}">
              <include name="**/Test*.java"/>
