MAPREDUCE-2475. Disable IPV6 for junit tests. (suresh srinivas via mahadev)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1100032 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -683,6 +683,7 @@
         dir="${basedir}" timeout="${test.timeout}"
         errorProperty="tests.failed" failureProperty="tests.failed">
         <jvmarg value="${test.junit.jvmargs}" />
+        <sysproperty key="java.net.preferIPv4Stack" value="true"/>
         <sysproperty key="test.build.data" value="@{test.dir}/data"/>
         <sysproperty key="java.security.krb5.conf"
           value="${test.src.dir}/krb5.conf"/>
