MAPREDUCE-2467. HDFS-1052 changes break the raid contrib module in MapReduce. (suresh srinivas via mahadev)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1101994 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/contrib/raid/build.xml
+++ b/src/contrib/raid/build.xml
@@ -34,7 +34,7 @@ to call at top-level: ant deploy-contrib compile-core-test
   <target name="test" depends="compile,compile-test,test-junit" description="Automated Test Framework" if="test.available"/>
 
   <target name="test-junit" depends="compile,compile-test" if="test.available">
-    <junit showoutput="${test.output}" fork="yes" printsummary="yes" errorProperty="tests.failed" 
+    <junit maxmemory="512m" showoutput="${test.output}" fork="yes" printsummary="yes" errorProperty="tests.failed" 
            haltonfailure="no" failureProperty="tests.failed" timeout="${test.timeout}">
 
         <classpath refid="test.classpath"/>
